<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/minus_btn"
        android:enabled="false"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="bottom"
        android:textSize="50sp"
        android:text="@string/minus_char" />

    <Button
        android:id="@+id/plus_btn"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="bottom|end"
        android:textSize="50sp"
        android:text="@string/plus_char" />

    <TextView
        android:id="@+id/counter_txt"
        android:layout_width="128dp"
        android:layout_height="140dp"
        android:layout_gravity="bottom|center"
        android:maxLines="1"
        android:text="@string/passengers"
        android:gravity="center"
        android:textSize="100sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/default_status"
        android:textColor="@color/green"
        android:textSize="24sp" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="226dp"
        android:layout_height="82dp"
        android:layout_gravity="center|top"
        android:gravity="center"
        android:text="@string/reset"
        android:textSize="25sp"
        android:visibility="invisible" />
</FrameLayout>